--- a/config/_default/params.yaml
+++ b/config/_default/params.yaml
@@ -18,8 +18,8 @@ marketing:
     site_type: Organization
     local_business_type: ''
     org_name: ''
-    description: 'A highly-customizable Hugo research group theme powered by Wowchemy website builder.'
-    twitter: 'wowchemy'
+    description: 'The official website for the Kriegstein Lab'
+    twitter: 'kriegsteinlab'
   analytics:
     google_analytics: ''
     baidu_tongji: ''
